# spatial-vtk

./: .gitignore  CITATION.cff  DATA_PROVENANCE.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  pyproject.toml  svtk_environment.yaml
.github/workflows/: ci.yml  docs.yml  release.yml
data/examples/: README.md
data/examples/configuration/: example_spatial_vtk_config.yaml
data/examples/data_formats/: example_dashboard_summary.csv  example_event_subset.csv  example_events.csv  example_manual_review_queue.csv  example_metrics_large_qc_passed.parquet  example_metrics_snapshot.csv  example_prepared_stations.csv  example_qc_summary.csv  example_site_metadata.csv  example_spatial_summary.csv  example_station_subset.csv  example_stations.csv  example_waveform_inventory.csv
docs/: changelog.rst  conf.py  configuration.rst  data_formats.rst  future_features.rst  index.rst  installation.rst  large_dataset_notebook_plan.md  package_overview.rst
docs/_static/: custom.css
docs/examples/: cli_workflow.rst  index.rst  step_01_ingest_and_prepare_data.ipynb  step_02_quality_control.ipynb  step_03_calculate_metrics.ipynb  step_06_additional_plotting_options.ipynb  step_07_dashboards.ipynb
docs/examples/large_run/: README.md  step_01_large_run_ingest_and_prepare_data.ipynb  step_02_large_run_quality_control.ipynb  step_03_large_run_calculate_metrics.ipynb  step_04_large_run_spatial_statistics.ipynb  step_05_large_run_geojson_corridors.ipynb  step_06_large_run_additional_plotting.ipynb  step_07_large_run_dashboards.ipynb
docs/reference/: cli_api.rst  index.rst  python_api.rst
docs/reference/api/: config.rst  io.rst  metrics.rst  qc.rst  spatial.rst  visualize.rst
docs/reference/cli/: call.rst  config.rst  dashboard.rst  io.rst  map.rst  metrics.rst  plot.rst  qc.rst  visualize.rst
docs/support/: contact.rst  troubleshooting.rst
src/spatial_vtk/: __init__.py
src/spatial_vtk/io/: __init__.py  (+16 more)
tests/: test_basemap_diagnostics.py  test_cli.py  test_compute_slurm_config.py  test_display_labels.py  test_foundation_helpers.py  test_geojson_helpers.py  test_import_surfaces.py  test_io_context_helpers.py  test_metrics_dashboard_spatial_integration.py  test_metrics_named_calculations.py  test_metrics_support_calculations.py  test_metrics_upstream_contracts.py  test_metrics_workflow.py  test_nonfigure_workflow_foundations.py  test_preprocessing_config_paths.py  test_public_figure_migration.py  test_qc_checkpointing.py  test_qc_helpers.py  test_runtime_config_layer.py  test_spatial_statistics.py  test_streamlit_dashboard_apps.py  test_visualize_context_record_sections.py  test_visualize_dashboard_qc_exports.py  test_waveform_asdf_reader.py
tools/: generate_cli_reference.py
(+123 files in other folders)
